fix: page height on mobile

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  height: 100vmin;
+  height: 100vh;
   margin-bottom: 5vmin;
 }
 
